[gd_scene load_steps=15 format=2]

[ext_resource path="res://Player/Player_Container.gd" type="Script" id=1]
[ext_resource path="res://Asteroid/Asteroid_Container.gd" type="Script" id=2]
[ext_resource path="res://Enemy/Enemy_Container.gd" type="Script" id=3]
[ext_resource path="res://Space Heroes.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/Game Background.png" type="Texture" id=5]
[ext_resource path="res://Assets/Kenney Pixel.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://UI/Menu.gd" type="Script" id=7]
[ext_resource path="res://Assets/Kenney Pixel Square.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 1
outline_color = Color( 1, 0.4, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 1
outline_color = Color( 1, 0.4, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 45
outline_size = 2
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 18
outline_size = 2
outline_color = Color( 0.117647, 0.12549, 0.517647, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
size = 20
outline_size = 1
outline_color = Color( 0.968627, 1, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=6]
size = 21
outline_size = 1
outline_color = Color( 0.968627, 0, 1, 1 )
font_data = ExtResource( 8 )

[node name="Game" type="Node2D"]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -24.471
autoplay = true

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )

[node name="Player_Container" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Asteroid_Container" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Enemy_Container" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Effects" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="UI/HUD"]
anchor_right = 1.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 0.156863 )

[node name="Score" type="Label" parent="UI/HUD"]
margin_left = 5.0
margin_right = 505.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "Score:"
valign = 1

[node name="Lives" type="Label" parent="UI/HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -500.0
margin_right = -15.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "Lives: "
align = 2
valign = 1

[node name="Menu" type="Control" parent="UI"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="UI/Menu"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 130.0
margin_right = 984.0
margin_bottom = 430.0
color = Color( 1, 0, 0, 0.25098 )

[node name="Label" type="Label" parent="UI/Menu"]
margin_right = 1024.0
margin_bottom = 450.0
custom_fonts/font = SubResource( 3 )
text = "Paused"
align = 1
valign = 1

[node name="Continue" type="Button" parent="UI/Menu"]
margin_left = 432.0
margin_top = 275.0
margin_right = 582.0
margin_bottom = 315.0
custom_fonts/font = SubResource( 4 )
text = "Continue"

[node name="Restart" type="Button" parent="UI/Menu"]
margin_left = 432.0
margin_top = 320.0
margin_right = 582.0
margin_bottom = 360.0
custom_fonts/font = SubResource( 5 )
text = "Restart"

[node name="Quit" type="Button" parent="UI/Menu"]
margin_left = 432.0
margin_top = 365.0
margin_right = 582.0
margin_bottom = 405.0
custom_fonts/font = SubResource( 6 )
text = "Quit"

[connection signal="pressed" from="UI/Menu/Continue" to="UI/Menu" method="_on_Continue_pressed"]
[connection signal="pressed" from="UI/Menu/Restart" to="UI/Menu" method="_on_Restart_pressed"]
[connection signal="pressed" from="UI/Menu/Quit" to="UI/Menu" method="_on_Quit_pressed"]
